--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -59,7 +59,7 @@
             <img src="assets/foxy.png" alt="">
             <div>
                 <h2 id="me">Nicolas Abadia Pinheiro</h2>
-                <h3> ILUSTRADOR | DESIGNER GRÁFICO</h3>
+                <h3> ILLUSTRATOR | GRAPHIC DESIGNER</h3>
                 <span class="email">nicolasabadia.contato@gmail.com</span>
                 <div class="social2">
                     
@@ -74,7 +74,7 @@
         <nav>
             <ul class="nav-port">
                 <li><a class="nav-link" id="a_portfolio" href="index.html">ILLUSTRATION & CONCEPT ART</a></li>
-                <li><a class="nav-link" id="a_resume" href="graphicdesign.html"><b>BRANDING, PACKING & EDITORIAL</b></a></li>
+                <li><a class="nav-link" id="a_resume" href="graphicdesign.html"><b>BRANDING, PACKAGING & EDITORIAL</b></a></li>
                 <li><a class="nav-link" id="a_resume" href="video.html">VIDEO & MOTION GRAPHICS</a></li>
             </ul>
         </nav>
@@ -108,7 +108,7 @@
                         <div>
                             <span>&times;</span>
                             <div class="popup-desc">
-                                <h2>Camisa da Equipe de Robótica Tatubóticos do SESI 434 Tatuapé</h2>
+                                <h2>Tatubóticos Robotics Team Shirt from SESI 434 Tatuapé</h2>
                                 <p>2023</p>
                                 <p><b>Softwares:</b> Illustrator & Photoshop</p>
                             </div>
@@ -121,7 +121,7 @@
                             <span>&times;</span>
                             <div class="popup-desc">
                                 <h2>SENAI #DESIGN DAY</h2>
-                                <p>PROJETO GRÁFICO PROMOCIONAL PARA O EVENTO DE COMEMORAÇÃO AO DIA MUNDIAL DO DESIGN - SENAI THEOBALDO DE NIGRIS</p>
+                                <p>PROMOTIONAL GRAPHIC PROJECT FOR THE WORLD DESIGN DAY CELEBRATION EVENT - SENAI THEOBALDO DE NIGRIS</p>
                                 <p>2022</p>
                                 <p><b>Softwares:</b> Illustrator & Photoshop</p>
                             </div>
@@ -143,7 +143,7 @@
                         <div>
                             <span>&times;</span>
                             <div class="popup-desc">
-                                <h2>Identidade Visual do Centro de Treinamento de Tênis de Mesa CEU Carrão</h2>
+                                <h2>Visual Identity of the CEU Carrão Table Tennis Training Center</h2>
                                 <p>2023</p>
                                 <p><b>Softwares:</b> Illustrator & Canva</p>
                             </div>
@@ -156,8 +156,8 @@
                         <div>
                             <span>&times;</span>
                             <div class="popup-desc">
-                                <h2>Ilustração e Diagramação do Livro Dom Casmurro</h2>
-                                <p>Projeto de Editorial do Curso Técnico de Design Gráfico do SENAI</p>
+                                <h2>Illustration and Layout of the Book Dom Casmurro</h2>
+                                <p>Editorial Project of the Technical Course in Graphic Design at SENAI</p>
                                 <p>2022</p>
                                 <p><b>Softwares:</b> Illustrator & Photoshop</p>
                             </div>
@@ -169,8 +169,8 @@
                         <div>
                             <span>&times;</span>
                             <div class="popup-desc">
-                                <h2>Campanha Promocional: Demon Slayer & Bubble Kill</h2>
-                                <p>Trabalho de Conclusão de Curso do Técnico em Design Gráfico do SENAI</p>
+                                <h2>Promotional Campaign: Demon Slayer & Bubble Kill</h2>
+                                <p>Final Project of the Technical Course in Graphic Design at SENAI</p>
                                 <p>2023</p>
                                 <p><b>Softwares:</b> Photoshop, Illustrator, After Effects, CapCut, Spline, InDesign & Figma</p>
                             </div>
@@ -185,9 +185,9 @@
                             <img src="assets/ALLWORKS/MitsuriMockup.png" alt="">
                             <img src="assets/ALLWORKS/mockup tokito.jpg" alt="">
                             <img src="assets/ALLWORKS/tanjimocuop.png" alt="">
-                            <h2>REDES SOCIAIS</h2>
+                            <h2>SOCIAL MEDIA</h2>
                             <img src="assets/ALLWORKS/POST FACEBOOK.png" alt="">
-                            <h2>COPOS</h2>
+                            <h2>CUPS</h2>
                             <video autoplay loop  src="assets/ALLWORKS/studio-lighting-copy-3 (2).mp4"></video>
                             <video autoplay loop  src="assets/ALLWORKS/studio-lighting-copy-3 (3).mp4"></video>
                             <video autoplay loop  src="assets/ALLWORKS/studio-lighting-copy-3 (4).mp4"></video>
@@ -216,8 +216,8 @@
                         <div>
                             <span>&times;</span>
                             <div class="popup-desc">
-                                <h2>Projeto de Identidade Visual da Marca BLOOP</h2>
-                                <p>Marca fictícia de chá infantil da empresa Dr. Oetker.</p>
+                                <h2>Visual Identity Project of the BLOOP Brand</h2>
+                                <p>Fictitious children's tea brand from Dr. Oetker.</p>
                                 <p>2022</p>
                                 <p><b>Softwares:</b> Illustrator & Photoshop</p>
                             </div>
@@ -236,8 +236,8 @@
                         <div>
                             <span>&times;</span>
                             <div class="popup-desc">
-                                <h2>Projeto de Embalagem da Marca BLOOP</h2>
-                                <p>Marca fictícia de chá infantil da empresa Dr. Oetker.</p>
+                                <h2>Packaging Project of the BLOOP Brand</h2>
+                                <p>Fictitious children's tea brand from Dr. Oetker.</p>
                                 <p>2022</p>
                                 <p><b>Softwares:</b> Illustrator & Photoshop</p>
                             </div>
@@ -254,7 +254,7 @@
        </section>
     </main>
     <footer>
-        <h2>CONTATO</h2>
+        <h2>CONTACT</h2>
         <span class="email">nicolasabadia.contato@gmail.com</span>
         <div translate="no" class="social">
             <a target="_blank" href="https://www.instagram.com/gogimatilu/">Instagram</a><span class="st">|</span><a
@@ -262,7 +262,7 @@
                 target="_blank" href="https://www.artstation.com/gogimatilu">Artstation</a><span class="st">|</span><a
                 target="_blank" href="https://www.behance.net/nicolasabadia">Behance</a>
         </div>
-        <span class="credits">Por Nicolas Abadia Pinheiro</span>
+        <span class="credits">By Nicolas Abadia Pinheiro</span>
     </footer>
     <script src="javascript/script.js"></script>
 </body>
