--- a/video.html
+++ b/video.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">r">
 
 <head>
     <meta charset="UTF-8">
@@ -57,7 +57,7 @@
             <img src="assets/foxy.png" alt="">
             <div>
                 <h2 id="me">Nicolas Abadia Pinheiro</h2>
-                <h3> ILUSTRADOR | DESIGNER GRÁFICO</h3>
+                <h3> ILLUSTRATOR | GRAPHIC DESIGNER</h3>
                 <span class="email">nicolasabadia.contato@gmail.com</span>
                 <div class="social2">
                     
@@ -72,7 +72,7 @@
         <nav>
             <ul class="nav-port">
                 <li><a class="nav-link" id="a_portfolio" href="index.html">ILLUSTRATION & CONCEPT ART</a></li>
-                <li><a class="nav-link" id="a_resume" href="graphicdesign.html">BRANDING, PACKING & EDITORIAL</a></li>
+                <li><a class="nav-link" id="a_resume" href="graphicdesign.html">BRANDING, PACKAGING & EDITORIAL</a></li>
                 <li><a class="nav-link" id="a_resume" href="video.html"><b>VIDEO & MOTION GRAPHICS</b></a></li>
             </ul>
         </nav>
@@ -92,7 +92,7 @@
        </section>
     </main>
     <footer>
-        <h2>CONTATO</h2>
+        <h2>CONTACT</h2>
         <span class="email">nicolasabadia.contato@gmail.com</span>
         <div translate="no" class="social">
             <a target="_blank" href="https://www.instagram.com/gogimatilu/">Instagram</a><span class="st">|</span><a
@@ -100,7 +100,7 @@
                 target="_blank" href="https://www.artstation.com/gogimatilu">Artstation</a><span class="st">|</span><a
                 target="_blank" href="https://www.behance.net/nicolasabadia">Behance</a>
         </div>
-        <span class="credits">Por Nicolas Abadia Pinheiro</span>
+        <span class="credits">By Nicolas Abadia Pinheiro</span>>
     </footer>
     <script src="javascript/script.js"></script>
 </body>
