--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -58,7 +58,7 @@
             <img src="assets/foxy.png" alt="">
             <div>
                 <h2 id="me">Nicolas Abadia Pinheiro</h2>
-                <h3> ILUSTRADOR | DESIGNER GRÁFICO</h3>
+                <h3> ILLUSTRATOR | GRAPHIC DESIGNER</h3>
                 <span class="email">nicolasabadia.contato@gmail.com</span>
                 <div class="social2">
                     
@@ -73,7 +73,7 @@
         <nav>
             <ul class="nav-port">
                 <li><a class="nav-link" id="a_portfolio" href="index.html"><b>ILLUSTRATION & CONCEPT ART</b></a></li>
-                <li><a class="nav-link" id="a_resume" href="graphicdesign.html">BRANDING, PACKING & EDITORIAL</a></li>
+                <li><a class="nav-link" id="a_resume" href="graphicdesign.html">BRANDING, PACKAGING & EDITORIAL</a></li>
                 <li><a class="nav-link" id="a_resume" href="video.html">VIDEO & MOTION GRAPHICS</a></li>
             </ul>
         </nav>
@@ -119,7 +119,7 @@
                             <span>&times;</span>
                             <div class="popup-desc">
                                 <h2>Thor Dog</h2>
-                                <p>Illustation Commission</p>
+                                <p>Illustration Commission</p>
                                 <p>2023</p>
                                 <p><b>Software:</b> Autodesk Sketchbook</p>
                             </div>
@@ -164,7 +164,7 @@
                             <span>&times;</span>
                             <div class="popup-desc">
                                 <h2>Tatu Robot Concept Art</h2>
-                                <p>Arte Conceitual de mascote para a equipe de robótica Tatubóticos da escola SESI 434 Tatuapé</p>
+                                <p>Concept Art of mascot for the robotics team Tatubóticos from SESI 434 Tatuapé school</p>
                                 <p>2023</p>
                                 <p><b>Softwares:</b> Clip Studio Paint & Blender</p>
                             </div>
@@ -172,7 +172,7 @@
                             <img src="assets/ALLWORKS/0023.jpg" alt="">
                             <video controls autoplay loop src="assets/ALLWORKS/0001-0250.mp4"></video>
                             <img src="assets/ALLWORKS/MOCKUPTATU (1).jpg" alt="">
-                            <p>Design da Camisa da Equipe Tatubóticos 2023</p>
+                            <p>Design of the Tatubóticos Team Shirt 2023</p>
                         </div>
                     </div>
                     <div class="popup-img" id="coelho">
@@ -201,6 +201,81 @@
                         <div class="image"><img src="assets/ALLWORKS/GOGIMATILU Render Study.png" alt=""></div>
                         <div class="image"><img src="assets/ALLWORKS/Frog Mage.png" alt=""></div>
                     </div>
+                    <div class="popup-img" id="demon">
+                        <div>
+                            <span>&times;</span>
+                            <div class="popup-desc">
+                                <h2>Promotional Campaign: Demon Slayer & Bubble Kill</h2>
+                                <p>Final Project of the Technical Course in Graphic Design at SENAI</p>
+                                <p>2023</p>
+                                <p><b>Softwares:</b> Photoshop, Illustrator, After Effects, CapCut, Spline, InDesign & Figma</p>
+                            </div>
+                            <img src="assets/ALLWORKS/Slide1.JPG" alt="">
+                            <h2>POSTERS</h2>
+                            <img src="assets/ALLWORKS/Mitsuri3.jpg" alt="">
+                            <img src="assets/ALLWORKS/Screenshot_20230530-054259_OneDrive.jpg" alt="">
+                            <img src="assets/ALLWORKS/Screenshot_20230530-054313_OneDrive.jpg" alt="">
+                            <img src="assets/ALLWORKS/Screenshot_20230530-054327_OneDrive.jpg" alt="">
+                            <h2>MOCKUPS</h2>
+                            <img src="assets/ALLWORKS/muckup mitsuri.jpg" alt="">
+                            <img src="assets/ALLWORKS/MitsuriMockup.png" alt="">
+                            <img src="assets/ALLWORKS/mockup tokito.jpg" alt="">
+                            <img src="assets/ALLWORKS/tanjimocuop.png" alt="">
+                            <h2>SOCIAL MEDIA</h2>
+                            <img src="assets/ALLWORKS/POST FACEBOOK.png" alt="">
+                            <h2>CUPS</h2>
+                            <video autoplay loop src="assets/ALLWORKS/studio-lighting-copy-3 (2).mp4"></video>
+                            <video autoplay loop src="assets/ALLWORKS/studio-lighting-copy-3 (3).mp4"></video>
+                            <video autoplay loop src="assets/ALLWORKS/studio-lighting-copy-3 (4).mp4"></video>
+                            <video autoplay loop src="assets/ALLWORKS/studio-lighting-copy-3 (5).mp4"></video>
+                        </div>
+                    </div>
+                    <div class="popup-img" id="bmq">
+                        <div>
+                            <span>&times;</span>
+                            <div class="popup-desc">
+                                <h2>Social Media: ONG Bem Quer</h2>
+                                <p>2024</p>
+                                <p><b>Softwares:</b> Illustrator & Photoshop</p>
+                            </div>
+                            <img src="assets/ALLWORKS/Untitled-1.png" alt="">
+                            <img src="assets/ALLWORKS/STORY-100.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="popup-img" id="bloopid">
+                        <div>
+                            <span>&times;</span>
+                            <div class="popup-desc">
+                                <h2>Visual Identity Project for the BLOOP Brand</h2>
+                                <p>Fictional children's tea brand from Dr. Oetker.</p>
+                                <p>2022</p>
+                                <p><b>Softwares:</b> Illustrator & Photoshop</p>
+                            </div>
+                            <img src="assets/ALLWORKS/Captura de tela 2024-02-05 153545.png" alt="">
+                            <img src="assets/ALLWORKS/Captura de tela 2024-02-05 153614.png" alt="">
+                            <img src="assets/ALLWORKS/Captura de tela 2024-02-05 153654.png" alt="">
+                            <img src="assets/ALLWORKS/Captura de tela 2024-02-05 154142.png" alt="">
+                            <img src="assets/ALLWORKS/Captura de tela 2024-02-05 153734.png" alt="">
+                            <img src="assets/ALLWORKS/Captura de tela 2024-02-05 153748.png" alt="">
+                            <img src="assets/ALLWORKS/Captura de tela 2024-02-05 153918.png" alt="">
+                            <img src="assets/ALLWORKS/Captura de tela 2024-02-05 154003.png" alt="">
+                            <img src="assets/ALLWORKS/Captura de tela 2024-02-05 154014.png" alt="">
+                        </div>
+                    </div>
+                    <div class="popup-img" id="bloopem">
+                        <div>
+                            <span>&times;</span>
+                            <div class="popup-desc">
+                                <h2>Packaging Project for the BLOOP Brand</h2>
+                                <p>Fictional children's tea brand from Dr. Oetker.</p>
+                                <p>2022</p>
+                                <p><b>Softwares:</b> Illustrator & Photoshop</p>
+                            </div>
+                            <img src="assets/ALLWORKS/Captura de tela 2024-02-05 154102.png" alt="">
+                            <img src="assets/ALLWORKS/Captura de tela 2024-02-05 154115.png" alt="">
+                            <img src="assets/ALLWORKS/Captura de tela 2024-02-05 154129.png" alt="">
+                        </div>
+                    </div>
                     
                 </div>
             </div>
@@ -208,7 +283,7 @@
        </section>
     </main>
     <footer>
-        <h2>CONTATO</h2>
+        <h2>CONTACT</h2>
         <span class="email">nicolasabadia.contato@gmail.com</span>
         <div translate="no" class="social">
             <a target="_blank" href="https://www.instagram.com/gogimatilu/">Instagram</a><span class="st">|</span><a
@@ -216,7 +291,7 @@
                 target="_blank" href="https://www.artstation.com/gogimatilu">Artstation</a><span class="st">|</span><a
                 target="_blank" href="https://www.behance.net/nicolasabadia">Behance</a>
         </div>
-        <span class="credits">Por Nicolas Abadia Pinheiro</span>
+        <span class="credits">By Nicolas Abadia Pinheiro</span>
     </footer>
 
     <script src="javascript/script.js"></script>
